Updated so that it works with Java 21, as I tried but I can't get some linux things to work in java 19